demo-oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-oauth

spec:
  selector:
    app: demo-oauth
  ports:
    - protocol: TCP
      port: 8090
