keycloak-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service

spec:
  type: NodePort
  clusterIP:
  selector:
    app: keycloak
  ports:
    - nodePort: 30169
      port: 8080
      targetPort: 8080
      protocol: TCP
