demo-oauth-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-demo-oauth
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo-oauth.local`)
      kind: Rule
      services:
        - name: demo-oauth
          port: 8090
